--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=bff-agendador-tarefa
+
+usuario.url=localhost:8080/usuario
+agendador-tarefas.url=localhost:8081/tarefas
+
+server.port=8083
