--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ notificacao.url=localhost:8082/email
 
 server.port=8083
 
-cron.horario=0 0/5 * * * ?
+cron.horario=0/30 0/1 * * * ?
 
 usuario.email=admin@admin.com
 usuario.senha=1234
